[package]
name = "loggy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
structopt = "0.3.25"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
text_io = "0.1.9"